modules/transit-opentest/vpc.tf
resource "aws_vpc" "main-vpc" {
    cidr_block = "${var.cidr}"
    enable_dns_hostnames = true

    tags = {
        Name = "${var.component_name}-vpc"
    }
}

resource "aws_ssm_parameter" "vpc-id" {
  name        = "/NHS/${var.environment}-${data.aws_caller_identity.current.account_id}/${var.component_name}-vpc/id"
  description = "ID of the ${var.component_name}-vpc"
  type        = "String"
  value       = aws_vpc.main-vpc.id

  tags = {
    Environment = "${var.environment}"
  }
}
