modules/transit-opentest/sg.tf
resource "aws_security_group" "vpn-sg" {
    name        = "${var.component_name}-vpn-sg"
    description = "Access to VPN client/gateway to OpenTest"
    vpc_id      = "${aws_vpc.main-vpc.id}"

    ingress {
        protocol    = "tcp"
        from_port   = 22
        to_port     = 22
        cidr_blocks = concat(split(",", "${data.aws_ssm_parameter.inbound_ips.value}"),
          ["10.0.0.0/8", "${var.my_ip}/32"])
    }

    # For debugging
    ingress {
        protocol    = "icmp"
        from_port   = -1
        to_port     = -1
        cidr_blocks = ["10.0.0.0/8"] # All local networks
    }

    # https to the PDS services
    ingress {
        protocol    = "tcp"
        from_port   = 443
        to_port     = 443
        cidr_blocks = ["10.0.0.0/8"] # All local networks
    }

    # ldap to SDS services
    ingress {
        protocol    = "tcp"
        from_port   = 389
        to_port     = 389
        cidr_blocks = ["10.0.0.0/8"] # All local networks
    }

    egress {
        from_port = 0
        to_port   = 0
        protocol  = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }

    tags = {
        Name = "${var.component_name}-vpn-sg"
    }
}
